--- a/education.html
+++ b/education.html
@@ -30,11 +30,11 @@
             </li>
             <br>
             <li class="list"><p>HSC | 2018 - 2020
-                <br>   CGPA - 86%
+                <br>   Percentage - 86%
                    <br>SVP college | Delhi 
                <br></li></p><br>
                <li class="list"><p>SSC | 2018
-                <br>   CGPA - 96%
+                <br>   Percentage - 96%
                    <br>SVP school | Delhi 
                <br></p></li>
             </ul>
