--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         </nav>
         
         <div class="detail">
-            <h1>Hi, I'm Shravani <span> Patil</span>, <br>a <span>Developer</span> !
+            <h1 class="nameheading">Hi, I'm Shravani <span> Patil</span>, <br>a <span>Developer</span> !
             </h1><br>
-            <p>I am a Final year Computer Engineering student having experience in UI/UX designing. <br>Also I build and host websites. <br>Apart from that, I'm fascinated towards photo and video editing.</p>
+            <p class="nameheading">I am a Final year Computer Engineering student <br> having experience in UI/UX designing. <br>Also I build and host websites. <br>Apart from that, I'm fascinated towards photo <br>and video editing.</p>
             <br>
             <a href="resume.html">My Resume</a>
         </div>  
