--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
             </ul>
         </nav>
         
-        <div class="detail">
+        <div style="overflow-x:auto;" class="detail">
             <h1>My <span>Projects</span> :
             </h1><br>
             <br>
